--- a/GenericDataAccess.App/GenericDataAccess.App.csproj
+++ b/GenericDataAccess.App/GenericDataAccess.App.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GenericDataAccess.Context\GenericDataAccess.Context.csproj" />
     <ProjectReference Include="..\GenericDataAccess.Repository\GenericDataAccess.Repository.csproj" />
   </ItemGroup>
